:art: ensure player+playlist has a z-index

--- a/player.css
+++ b/player.css
@@ -37,6 +37,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 10000;
     border-top: 2px solid var(--border-color);
     color: var(--text-color);
 }
